--- a/loja/loja.yml
+++ b/loja/loja.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     password: 77822
     username: root
-    url: jdbc:mysql://localhost:3306/loja?useTimezone=true&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/loja
   jpa:
     hibernate:
       ddl-auto: update
