--- a/transportator/transportador.yml
+++ b/transportator/transportador.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     password: 77822
     username: root
-    url: jdbc:mysql://localhost:3306/transportador?useTimezone=true&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/transportador
   jpa:
     hibernate:
       ddl-auto: update
