--- a/transportator/transportador.yml
+++ b/transportator/transportador.yml
@@ -1,8 +1,10 @@
 spring:
   datasource:
+    driver-class-name: com.mysql.jdbc.Driver
     password: 77822
     username: root
     url: jdbc:mysql://localhost:3306/transportador
   jpa:
     hibernate:
       ddl-auto: update
+    
