--- a/transportator/transportador.yml
+++ b/transportator/transportador.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     password: 77822
     username: root
     url: jdbc:mysql://localhost:3306/transportador
