--- a/transportator/transportador.yml
+++ b/transportator/transportador.yml
@@ -1,9 +1,8 @@
 spring:
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
     password: 77822
     username: root
-    url: jdbc:mysql://localhost:3306/transportador
+    url: jdbc:mysql://localhost:3306/transport
   jpa:
     hibernate:
       ddl-auto: update
