--- a/transportator/transportador.yml
+++ b/transportator/transportador.yml
@@ -1,9 +1,10 @@
 spring:
   datasource:
-    password: 77822
+    password: root
     username: root
-    url: jdbc:mysql://localhost:3306/transportador?useTimezone=true&serverTimezone=UTC
+    url: 'jdbc:mysql://localhost:3307/transportador'
   jpa:
     hibernate:
       ddl-auto: update
+
     
